# Curvature

./: .gitignore  CMakeLists.txt  GraphSpecial.h  LruCache.h  README.md  bgp.cpp  cache_structures.h  core.h  curvature.cpp  curvatureHandler.h  cylinder1_6_3000.graphml  cylinder_6_3000.graphml  emd.h  flot.cpp  full_bipartitegraph.h  full_transshipmentgraph.h  main.cpp  network_simplex_simple.h  parallelDijskra.cpp  prot.cpp  regular.cpp  regular_2_1000.graphml  regular_3_1000.graphml  regular_3_10002.graphml  regular_3_10003.graphml  regular_3_1800.graphml  regular_3_2000.graphml  regular_3_2500.graphml  regular_3_3000.graphml  regular_4_1000.graphml  regular_4_3000.graphml  regular_6_1000.graphml  regular_6_2000.graphml  ricci.cpp  ricci.h  road.cpp  roadnetwork3.graphml  small_0.00_3000.graphml  small_0.00_4000.graphml  test.cpp  (+1 more)
Graphs_data/: regular_0.00_3000.graphml  regular_2_3000.graphml  regular_5_1000.graphml  regular_6_2000.graphml
Validation/: ..\cylinder_6_3000.graphml  MDSAttempt.py  SBMprocess.py  edgeseffect.py  gen_cylinder_swiss.py  gen_regular_erdos_sbm.py  processing.py  verif.py  visualisation.py
old/: correctFile.cpp  poubelle.cpp  test1.cpp
processed/: processed.1.graphml  processed.10.graphml  processed.11.graphml  processed.12.graphml  processed.13.graphml  processed.14.graphml  processed.15.graphml  processed.16.graphml  processed.17.graphml  processed.18.graphml  processed.19.graphml  processed.2.graphml  processed.20.graphml  processed.2000.graphml  processed.21.graphml  processed.22.graphml  processed.23.graphml  processed.24.graphml  processed.25.graphml  processed.26.graphml  processed.27.graphml  processed.28.graphml  processed.29.graphml  processed.3.graphml  processed.30.graphml  processed.31.graphml  processed.32.graphml  processed.33.graphml  processed.34.graphml  processed.35.graphml  processed.36.graphml  processed.37.graphml  processed.38.graphml  processed.39.graphml  processed.4.graphml  processed.40.graphml  processed.41.graphml  processed.42.graphml  processed.43.graphml  processed.44.graphml  (+11 more)
python/: GraphtoolTest.py  SBMprocess.py  cylinder.py  cylinderAnalysis.py  plotgraph.py  processing.py  regular.py  regular_6_3000.graphml  roadMapProcess.py  roadMapProcess2.py  validation1.py
